--- a/templeinn/contact.html
+++ b/templeinn/contact.html
@@ -60,7 +60,7 @@
 
                 <div class="t-cards" id="hotel-img">
                     <div class="cards">
-                        <img class="all-images" src="images/WhiteHotel.jpg" alt="">
+                        <img class="all-images" src="images/WhiteHotel2.jpg" alt="">
                     </div>
                 </div>
 
