--- a/templeinn/home.html
+++ b/templeinn/home.html
@@ -75,8 +75,8 @@
                     dedication took place on 19 October 2019 by Elder Craig C. Christensen. This temple is not
                     yet complete, but is scheduled to be dedicated sometime in 2022.
                 </p>
-                <div id="resBtn">
-                    <a href="reservations.html">Make a Reservation</a>
+                <div id="callActionBtn">
+                    <a id="resBtn" href="reservations.html">Make a Reservation</a>
                 </div>
             </div>
 
