--- a/templeinn/templeclosureschedule.html
+++ b/templeinn/templeclosureschedule.html
@@ -56,8 +56,8 @@
                     helpful information about the following temples that are located closest to our hotels.</p>
             </div>
             <div>
-                <div id="back-button">
-                    <a href="temples.html">
+                <div>
+                    <a id="back-button" href="temples.html">
                         <-Back to Temples </a>
                 </div>
             </div>
