--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -84,12 +84,8 @@
                     <p><b>Dedication:</b><br>Completion 2022</p>
                 </div>
                 <div class="templeBtn-grid">
-                    <div class="temple-button1">
-                        <a href="saratogaschedule.html">Temple Schedule</a>
-                    </div>
-                    <div class="temple-button2">
-                        <a href="saratogaclosure.html">Temple Closures</a>
-                    </div>
+                    <a class="templeButtons" href="laytonschedule.html">Temple Schedule</a>
+                    <a class="templeButtons" href="laytonclosure.html">Temple Closures</a>
                 </div>
             </div>
 
@@ -120,12 +116,8 @@
                     <p><b>Dedication:</b><br> 7 June 2015</p>
                 </div>
                 <div class="templeBtn-grid">
-                    <div class="temple-button1">
-                        <a href="paysonschedule.html">Temple Schedule</a>
-                    </div>
-                    <div class="temple-button2">
-                        <a href="paysonclosure.html">Temple Closures</a>
-                    </div>
+                    <a class="templeButtons" href="laytonschedule.html">Temple Schedule</a>
+                    <a class="templeButtons" href="laytonclosure.html">Temple Closures</a>
                 </div>
             </div>
 
@@ -156,12 +148,8 @@
                     <p><b>Dedication:</b><br> 18 January 1972</p>
                 </div>
                 <div class="templeBtn-grid">
-                    <div class="temple-button1">
-                        <a href="ogdenschedule.html">Temple Schedule</a>
-                    </div>
-                    <div class="temple-button2">
-                        <a href="ogdenclosure.html">Temple Closures</a>
-                    </div>
+                    <a class="templeButtons" href="laytonschedule.html">Temple Schedule</a>
+                    <a class="templeButtons" href="laytonclosure.html">Temple Closures</a>
                 </div>
                 <div>
                     <div></div>
@@ -194,12 +182,10 @@
                     <p><b>Groundbreaking:</b><br> 23 May 2020</p>
                     <p><b>Dedication:</b><br> Completion 2023</p>
                 </div>
-                <div class="templeBtn-grid">
-                    <div class="temple-button1">
-                        <a href="laytonschedule.html">Temple Schedule</a>
-                    </div>
-                    <div class="temple-button2">
-                        <a href="laytonclosure.html">Temple Closures</a>
+                <div>
+                    <div class="templeBtn-grid">
+                        <a class="templeButtons" href="laytonschedule.html">Temple Schedule</a>
+                        <a class="templeButtons" href="laytonclosure.html">Temple Closures</a>
                     </div>
                 </div>
             </div>
