--- a/templeinn/ogdenclosure.html
+++ b/templeinn/ogdenclosure.html
@@ -56,8 +56,8 @@
                 </p>
             </div>
             <div>
-                <div id="back-button">
-                    <a href="temples.html">
+                <div>
+                    <a id="back-button" href="temples.html">
                         <-Back to Temples </a>
                 </div>
             </div>
