--- a/templeinn/services.html
+++ b/templeinn/services.html
@@ -123,13 +123,17 @@
                     <h2>Learn more about our specialized services:</h2>
                 </div>
                 <div id="specializedBtns">
+                    <a class="special-Btn" href="reception.html">Receptions</a>
+                    <a class="special-Btn" href="missionary.html">Full-Time Temple Missionaries</a>
+                </div>
+                <!--<div id="specializedBtns">
                     <div id="special-Btn1">
                         <a href="reception.html">Receptions</a>
                     </div>
                     <div id="special-Btn2">
                         <a href="missionary.html">Full-Time Temple Missionaries</a>
                     </div>
-                </div>
+                </div>-->
             </div>
     </main>
     <!-- FOOTER HERE -->
