--- a/templeinn/reception.html
+++ b/templeinn/reception.html
@@ -48,7 +48,81 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <h2>Receptions</h2>
+        <div class="page-intro">
+            <h2>Receptions</h2>
+            <p>
+                The Temple Inn and Suites knows how to do weddings! We want your special day to be exactly as
+                you've always imagined it. Our hotel facilities offer three different venue location's on the
+                hotel grounds that can be customized to fit your preferred style. The Grand ballroom, a white
+                tent reception area, and our garden reception area.
+            </p>
+        </div>
+        <div class="reception-grid1">
+            <div class="t-cards">
+                <div class="cards">
+                    <img class="all-images" src="images/weddingtable01.jpg" alt="Wedding Dinner">
+                </div>
+            </div>
+            <div class="t-cards">
+                <div class="cards">
+                    <div id="weddingPics">
+                        <img class="all-images" src="images/weddingtable02.jpg" alt="Wedding Dinner">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="weddingPkg">
+            <h2>Wedding Package Amenities</h2>
+            <ul>
+                <li>White linen tablecloths and a wide selection of colorful linen napkins and table runners.</li>
+                <li>White china tableware, stemmed glassware and flatware.</li>
+                <li>Room set-up including a head table for your wedding party,
+                    banquet rounds for your guests, wood dance floor for the tent and garden receptions areas,
+                    staging for your band or DJ, gift tables, and the cake display table.</li>
+                <li>A variety of flowers and decor items for table centerpieces.</li>
+                <li>A professional florist, and decorating staff who will transform our venues to meet
+                    your wedding style and taste.</li>
+                <li>A full-staff catering kitchen, with professional chefs, pastery chefs, and cake decorators.</li>
+                <li>A professional banquet service staff ready to serve your plated dinners and/or replenish the
+                    buffet areas.
+                </li>
+                <li>Plenty of free self-parking areas for all our venues.</li>
+                <li>A complimentary, wedding night hotel stay for the bride and groom in one of our wedding suites.</li>
+            </ul><br><br>
+
+            <h3>To Learn More</h3>
+            <p>If you would like to know more about our Reception Packages and avaliable dates, please feel free to
+                contact us and we will put you in touch with our wedding planners who will be happy to provide more
+                detailed information about our reception services.
+            </p>
+        </div>
+        <div>
+            <a id="receptionContactBtn" href="reception.html">Contact Us</a>
+        </div>
+
+        <div class="reception-grid2">
+            <div class="t-cards">
+                <div class="cards">
+                    <img class="all-images" src="images/weddingtent01.jpg" alt="Wedding Tent">
+                </div>
+            </div>
+            <div class="t-cards">
+                <div class="cards">
+                    <img class="all-images" src="images/weddingdinner01.jpg" alt="Wedding Dinner">
+                </div>
+            </div>
+            <div class="t-cards">
+                <div class="cards">
+                    <img class="all-images" src="images/weddingcake01.jpg" alt="Wedding Cake">
+                </div>
+            </div>
+            <div class="t-cards">
+                <div class="cards">
+                    <img class="all-images" src="images/weddingtent2.jpg" alt="Wedding Tent">
+                </div>
+            </div>
+        </div>
+
     </main>
     <!-- FOOTER HERE -->
     <footer>
