--- a/templeinn/resources.html
+++ b/templeinn/resources.html
@@ -112,12 +112,25 @@
                 <h3>Reseptions Page</h3>
                 <a href="https://www.pexels.com/photo/two-table-with-eight-chairs-inside-room-1030979/">Reception
                     Table Picture</a>
+                <a href="https://unsplash.com/photos/hw_sKmjb0ns">Tent Reception</a>
+                <a href="https://unsplash.com/photos/fn0xXL9szcU">Outdoor Garden Style Reception</a>
+                <a href="https://www.pexels.com/photo/table-setting-2970286/">Outside Rectpiton</a>
+                <a href="https://www.pexels.com/photo/white-table-with-chairs-2788487/">Outdoor Recetpion Dinner</a>
+                <a href="https://www.pexels.com/photo/white-table-with-chairs-2788487/">Rustic Wedding Reception</a>
+                <a href="https://www.pexels.com/photo/round-dining-table-2306282/">Fancy Table Settings</a>
+                <a href="https://unsplash.com/photos/URVe89DA5Cw">Tent Reception</a>
+                <a href="https://www.pexels.com/photo/layers-of-wedding-cake-4693617/">Wedding Cake</a>
+                <a href="https://unsplash.com/photos/22JxStzTxwo">Wedding Cake with Flowers</a>
+                <a href="https://www.pexels.com/photo/photo-of-chairs-and-tables-8258933/">Tent Reception</a>
+                <a href="https://www.pexels.com/photo/table-setting-2970292/"></a>
+                <a href="https://www.pexels.com/photo/salads-served-on-plates-2504969/"></a>
             </div>
 
 
             <div>
                 <h3>Reservations Page</h3>
                 <a href="https://unsplash.com/photos/GUno-FetWJM">Hotel Bedroom Picture</a>
+
             </div>
 
 
