--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -112,7 +112,7 @@
                         Distribution center nearby</p>
                     <h3>History:</h3>
                     <p><b>Announcement:</b><br> 25 January 2010</p>
-                    <p><b>Announcement:</b><br> 25 January 2010</p>
+                    <p><b>Groundbreaking:</b><br> 8 October 2011</p>
                     <p><b>Dedication:</b><br> 7 June 2015</p>
                 </div>
                 <div class="templeBtn-grid">
@@ -144,7 +144,7 @@
                         Distribution center nearby</p>
                     <h3>History:</h3>
                     <p><b>Announcement:</b><br> 24 August 1967</p>
-                    <p><b>Announcement:</b><br> 24 August 1967</p>
+                    <p><b>Groundbreaking:</b><br> 8 September 1969</p>
                     <p><b>Dedication:</b><br> 18 January 1972</p>
                 </div>
                 <div class="templeBtn-grid">
