--- a/templeinn/contact.html
+++ b/templeinn/contact.html
@@ -51,30 +51,32 @@
         <div>
             <div class="page-intro">
                 <h2>Contact Us</h2>
-                <p>If you have questions, comments or concerns, please feel free to contact us by phone,
-                    e-mail, or by filling out the form below and we will get back to as soon as we are able.
+                <p>If you have questions about any of our services or facilities please feel free to
+                    contact us by phone, e-mail, or by filling out the form below.
                 </p>
             </div>
 
             <div id="contact-grid">
 
-                <div class="t-cards" id="hotel-img">
-                    <div class="cards">
-                        <img class="all-images" src="images/WhiteHotel2.jpg" alt="">
-                    </div>
-                </div>
+                <div id="contact-info">
+                    <div class="t-cards" id="hotel-img">
+                        <div class="cards">
+                            <img class="all-images" src="images/WhiteHotel2.jpg" alt="">
+                        </div>
 
-                <div class="contact-div" id="contact-div1">
-                    <h2>Temple Inn and Suites</h2>
-                    <div id="contact-info">
-                        <p>4800 Montgomery Ln #300<br>
-                            Bethesda, MD 20814<br>
-                        </p>
-                        <p><a href="https://goo.gl/maps/RUY86Yp9Eiqg8TVx9">
-                                <i class="material-icons">&#xe567;</i>Location Map</a>
-                        </p>
-                        <p>(000)999-9999</p>
-                        <p>customerservice@templeinn.com</p>
+                        <div class="contact-div" id="contact-div1">
+                            <h2>Temple Inn and Suites</h2>
+                            <div id="contact-info">
+                                <p>4800 Montgomery Ln #300<br>
+                                    Bethesda, MD 20814<br>
+                                </p>
+                                <p><a href="https://goo.gl/maps/RUY86Yp9Eiqg8TVx9">
+                                        <i class="material-icons">&#xe567;</i>Location Map</a>
+                                </p>
+                                <p>(000)999-9999</p>
+                                <p>customerservice@templeinn.com</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -104,8 +106,8 @@
                         </div>
                     </form>
                 </div>
+
             </div>
-        </div>
 
     </main>
     <!-- FOOTER HERE -->
