--- a/templeinn/home.html
+++ b/templeinn/home.html
@@ -62,8 +62,8 @@
 
         <div class="main-divs" id="home-grid">
             <div class="t-cards">
-                <div class="cards" id="lightTemple">
-                    <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpg"
+                <div class="cards">
+                    <img class="all-images" id="lightTemple" src="images/SaratogaSpringsUtahTemple.jpg"
                         alt="Saratoga Springs Utah Temple">
                 </div>
             </div>
@@ -82,8 +82,8 @@
 
 
             <div class="t-cards">
-                <div class="cards" id="nightTemple">
-                    <img class="all-images" src="images/SaratogaSpringsUtahTemple3.jpg"
+                <div class="cards">
+                    <img class="all-images" id="nightTemple" src="images/SaratogaSpringsUtahTemple3.jpg"
                         alt="Saratoga Springs Temple at night">
                 </div>
             </div>
