--- a/templeinn/reception.html
+++ b/templeinn/reception.html
@@ -34,7 +34,7 @@
         <nav>
             <ul class="mainMenu">
                 <li class="menubutton"><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
-                <li><a href="home.html" class="currentpage">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="temples.html">Temples</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="reservations.html">Reservations</a></li>
@@ -82,22 +82,24 @@
                 <li>A variety of flowers and decor items for table centerpieces.</li>
                 <li>A professional florist, and decorating staff who will transform our venues to meet
                     your wedding style and taste.</li>
-                <li>A full-staff catering kitchen, with professional chefs, pastery chefs, and cake decorators.</li>
+                <li>A full-staff catering kitchen, with professional chefs, pastry chefs, and cake decorators.</li>
                 <li>A professional banquet service staff ready to serve your plated dinners and/or replenish the
                     buffet areas.
+                </li>
+                <li>Meal options include beef brisket, chicken, or fish, with a variety of side dishes to choose from.
                 </li>
                 <li>Plenty of free self-parking areas for all our venues.</li>
                 <li>A complimentary, wedding night hotel stay for the bride and groom in one of our wedding suites.</li>
             </ul><br><br>
 
             <h3>To Learn More</h3>
-            <p>If you would like to know more about our Reception Packages and avaliable dates, please feel free to
+            <p>If you would like to know more about our Reception Packages and available dates, please feel free to
                 contact us and we will put you in touch with our wedding planners who will be happy to provide more
                 detailed information about our reception services.
             </p>
         </div>
         <div>
-            <a id="receptionContactBtn" href="reception.html">Contact Us</a>
+            <a id="receptionContactBtn" href="contact.html">Contact Us</a>
         </div>
 
         <div class="reception-grid2">
