--- a/templeinn/resources.html
+++ b/templeinn/resources.html
@@ -137,6 +137,13 @@
             <div>
                 <h3>Full-Time Missionaries Page</h3>
                 <a href="https://unsplash.com/photos/MP0bgaS_d1c">Kitchenette Picture</a>
+                <a
+                    href="https://www.pexels.com/photo/modern-bathroom-interior-with-toiletry-products-between-washbasins-6947282/">Bathroom</a>
+                <a href="https://unsplash.com/photos/OttUMTivRVc">Living Room</a>
+                <a
+                    href="https://www.pexels.com/photo/stylish-design-of-living-room-with-couch-and-dining-zone-6312358/">Living
+                    and Dining Room</a>
+                <a href="https://unsplash.com/photos/2dQw7ufLiUM">Balcony View</a>
             </div>
 
 
