--- a/templeinn/services.html
+++ b/templeinn/services.html
@@ -59,7 +59,7 @@
 
 
         <div class="main-divs">
-            <div class="t-cards" id="amenities">
+            <div id="amenities">
                 <div id="amenities-grid">
                     <div id="amenities-list">
                         <h2>Provided Amenities</h2>
@@ -75,16 +75,16 @@
                             <li>Family Ordinance Card Service</li>
                         </ul>
                     </div>
-                    <div id="image-grid">
+                    <div class="t-cards">
                         <div class="cards" id="am-img2">
-                            <img class="all-images" src="images/hotelpool.jpg" alt="Hotel Pool">
+                            <img class="all-images" src="images/hotelpool2.jpg" alt="Hotel Pool">
                         </div>
                     </div>
                 </div>
             </div>
 
 
-            <div class="t-cards">
+            <div>
                 <div id="specialized-grid">
                     <div id="specialized-list">
                         <h2>Specialized Services</h2>
@@ -92,7 +92,7 @@
                             <li>Access to changing rooms and bathroom facilities for temple patrons who
                                 need to change to and from church clothes.
                             </li>
-                            <li> Low-cost, short-term child care services with a playroom beautiful
+                            <li> Low-cost, short-term child care services with a beautiful
                                 playroom for the children of patrons.
                             </li>
                             <li>Long-term living accommodations for full-time missionaries serving at the
@@ -107,14 +107,22 @@
                                 ordinance work.</li>
                         </ul>
                     </div>
-                    <div class="cards">
-                        <img class="all-images" src="images/kitchenette.jpg" alt="Small Kitchenette">
-                    </div>
-                    <div class="cards">
-                        <img class="all-images" src="images/childcare.jpg" alt="Children Playing">
-                    </div>
-                    <div class="cards">
-                        <img class="all-images" src="images/reception1.jpg" alt="Reception Room">
+                    <div id="specializedImg-grid">
+                        <div class="t-cards" id="kitchenetteImg">
+                            <div class="cards">
+                                <img class="all-images" src="images/kitchenette.jpg" alt="Small Kitchenette">
+                            </div>
+                        </div>
+                        <div class="t-cards" id="childcareImg">
+                            <div class="cards">
+                                <img class="all-images" src="images/childcare.jpg" alt="Children Playing">
+                            </div>
+                        </div>
+                        <div class="t-cards" id="receptionImg">
+                            <div class="cards">
+                                <img class="all-images" src="images/reception1.jpg" alt="Reception Room">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
