--- a/templeinn/ordinanceschedule.html
+++ b/templeinn/ordinanceschedule.html
@@ -11,8 +11,6 @@
 
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster+Two&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/small.css" />
@@ -36,7 +34,7 @@
             <ul class="mainMenu">
                 <li class="menubutton"><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="temples.html" class="currentpage">Temples</a></li>
+                <li><a href="temples.html">Temples</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="reservations.html">Reservations</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
