--- a/templeinn/reception.html
+++ b/templeinn/reception.html
@@ -6,12 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receptions</title>
-    <meta name="description" content="Information page about holding a recption at the Inn." />
+    <meta name="description" content="Information page about holding a reception at the Inn." />
 
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster+Two&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/small.css" />
