--- a/templeinn/resources.html
+++ b/templeinn/resources.html
@@ -34,7 +34,7 @@
         <nav>
             <ul class="mainMenu">
                 <li class="menubutton"><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
-                <li><a href="home.html" class="currentpage">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="temples.html">Temples</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="reservations.html">Reservations</a></li>
@@ -50,115 +50,85 @@
     <main>
         <div>
             <div>
-                <h2>Resoruces</h2>
+                <h2>Website Resource Information</h2>
+            </div>
+            <div class="resource-div">
                 <h3>Home Page</h3>
                 <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/news/">
-                    Saratoga Springs Utah Temple Image</a><br>
+                    Saratoga Springs Utah Temple Image at Night</a><br>
                 <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">
-                    Saratoga Springs Utah Temple Information</a><br>
-                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">
-                    Saratoga Springs Utah Temple Photo</a><br>
+                    Saratoga Springs Utah Temple Image and Information</a><br>
                 <a href="">Current Weather Conditions</a><br>
                 <a href="">Three Day Weather Forecast</a>
             </div>
 
 
-            <div>
+            <div class="resource-div">
                 <h3>Temples Page</h3>
                 <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah
-                    Temple Image</a><br>
-                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">
-                    Saratoga Springs Utah Temple Information</a><br>
-                <a href="https://churchofjesuschristtemples.org/payson-utah-temple/">Payson Utah Temple Image</a><br>
-                <a href="https://churchofjesuschristtemples.org/payson-utah-temple/">Payson Utah Temple
-                    Infomration</a><br>
-                <a href="https://churchofjesuschristtemples.org/ogden-utah-temple/">Ogden Utah Temple Image</a><br>
-                <a href="https://churchofjesuschristtemples.org/ogden-utah-temple/">Ogden Utah Temple
+                    Temple Image and Information</a><br>
+                <a href="https://churchofjesuschristtemples.org/payson-utah-temple/">Payson Utah Temple Image and
                     Information</a><br>
-                <a href="https://churchofjesuschristtemples.org/layton-utah-temple/">Layton Utah Temple Image</a><br>
-                <a href="https://churchofjesuschristtemples.org/layton-utah-temple/">Layton Utah Temple
+                <a href="https://churchofjesuschristtemples.org/ogden-utah-temple/">Ogden Utah Temple Image and
+                    Information</a><br>
+                <a href="https://churchofjesuschristtemples.org/layton-utah-temple/">Layton Utah Temple Image and
                     Information</a><br>
             </div>
 
 
-            <div>
+            <div class="resource-div">
                 <h3>Temple Ordinance Schedule Pages</h3>
                 <a href="https://churchofjesuschristtemples.org/temples/schedules/">Saratoga Springs Utah
                     Temple Information</a><br>
             </div>
 
 
-            <div>
+            <div class="resource-div">
                 <h3>Temple Closure Pages</h3>
                 <a href="https://churchofjesuschristtemples.org/temples/schedules/">Payson Utah Temple
                     Information</a><br>
             </div>
 
 
-            <div>
+            <div class="resource-div">
                 <h3>Services Page</h3>
-                <a href="https://www.pexels.com/photo/luxurious-pool-in-private-villa-4117984/">Indoor Pool Picute</a>
-                <a href="https://www.pexels.com/photo/a-cafeteria-with-a-modern-interior-9306208/">Hotel eating area</a>
-                <a href="https://www.pexels.com/photo/stainless-steel-sink-with-faucet-9139206/">Small Kitchen
-                    Picture</a>
-                <a href="https://unsplash.com/photos/Wj6oZNCAzs4">Small Kitchen Picture</a>
-                <a href="https://unsplash.com/photos/LOA2mTj1vhc">Hotel Gym</a>
+                <a href="https://www.pexels.com/photo/luxurious-pool-in-private-villa-4117984/">Indoor Pool
+                    Picture</a><br>
+                <a href="https://unsplash.com/photos/Wj6oZNCAzs4">Small Kitchen Picture</a><br>
                 <a href="https://www.pexels.com/photo/girl-in-red-dress-playing-a-wooden-blocks-3662667/">Child Care
-                    Picture</a>
+                    Picture</a><br>
                 <a href="https://www.pexels.com/photo/tables-with-flower-decors-2306281/">Wedding Reception Picture</a>
             </div>
 
-            <div>
+            <div class="resource-div">
                 <h3>Reseptions Page</h3>
-                <a href="https://www.pexels.com/photo/two-table-with-eight-chairs-inside-room-1030979/">Reception
-                    Table Picture</a>
-                <a href="https://unsplash.com/photos/hw_sKmjb0ns">Tent Reception</a>
-                <a href="https://unsplash.com/photos/fn0xXL9szcU">Outdoor Garden Style Reception</a>
-                <a href="https://www.pexels.com/photo/table-setting-2970286/">Outside Rectpiton</a>
-                <a href="https://www.pexels.com/photo/white-table-with-chairs-2788487/">Outdoor Recetpion Dinner</a>
-                <a href="https://www.pexels.com/photo/white-table-with-chairs-2788487/">Rustic Wedding Reception</a>
-                <a href="https://www.pexels.com/photo/round-dining-table-2306282/">Fancy Table Settings</a>
-                <a href="https://unsplash.com/photos/URVe89DA5Cw">Tent Reception</a>
-                <a href="https://www.pexels.com/photo/layers-of-wedding-cake-4693617/">Wedding Cake</a>
-                <a href="https://unsplash.com/photos/22JxStzTxwo">Wedding Cake with Flowers</a>
-                <a href="https://www.pexels.com/photo/photo-of-chairs-and-tables-8258933/">Tent Reception</a>
-                <a href="https://www.pexels.com/photo/table-setting-2970292/"></a>
-                <a href="https://www.pexels.com/photo/salads-served-on-plates-2504969/"></a>
+                <a href="https://unsplash.com/photos/hw_sKmjb0ns">Beautiful Table Setting</a><br>
+                <a href="https://www.pexels.com/photo/round-dining-table-2306282/">Fancy Table Settings</a><br>
+                <a href="https://www.pexels.com/photo/layers-of-wedding-cake-4693617/">Wedding Cake</a><br>
+                <a href="https://www.pexels.com/photo/photo-of-chairs-and-tables-8258933/">Tent Reception</a><br>
+                <a href="https://www.pexels.com/photo/table-setting-2970292/">Outdoor Reception</a><br>
+                <a href="https://www.pexels.com/photo/salads-served-on-plates-2504969/">Salad on Plate</a><br>
             </div>
 
-
-            <div>
-                <h3>Reservations Page</h3>
-                <a href="https://unsplash.com/photos/GUno-FetWJM">Hotel Bedroom Picture</a>
-
-            </div>
-
-
-            <div>
+            <div class="resource-div">
                 <h3>Full-Time Missionaries Page</h3>
-                <a href="https://unsplash.com/photos/MP0bgaS_d1c">Kitchenette Picture</a>
+                <a href="https://unsplash.com/photos/Wj6oZNCAzs4">Small Kitchen</a><br>
                 <a
-                    href="https://www.pexels.com/photo/modern-bathroom-interior-with-toiletry-products-between-washbasins-6947282/">Bathroom</a>
-                <a href="https://unsplash.com/photos/OttUMTivRVc">Living Room</a>
+                    href="https://www.pexels.com/photo/modern-bathroom-interior-with-toiletry-products-between-washbasins-6947282/">
+                    Bathroom</a><br>
                 <a
-                    href="https://www.pexels.com/photo/stylish-design-of-living-room-with-couch-and-dining-zone-6312358/">Living
-                    and Dining Room</a>
+                    href="https://www.pexels.com/photo/stylish-design-of-living-room-with-couch-and-dining-zone-6312358/">
+                    Living and Dining Room</a><br>
                 <a href="https://unsplash.com/photos/2dQw7ufLiUM">Balcony View</a>
+                <a href="https://unsplash.com/photos/GUno-FetWJM">Hotel Bedroom Picture</a>
             </div>
 
 
-            <div>
+            <div class="resource-div">
                 <h3>Contact Page</h3>
-                <a href="https://www.pexels.com/photo/white-and-brown-concrete-building-9645145/">Hotel Picture</a>
-                <a href="https://unsplash.com/photos/RsXA0Z3iWRw">Hotel Picture</a>
                 <a href="https://unsplash.com/photos/_hw4aUQ81ic">Hotel Picture</a>
-                <a href="https://unsplash.com/photos/rA2t29hZj1s">Hotel Garden</a>
             </div>
 
-
-            <div>
-                <h3>Form Conformation Pages</h3>
-            </div>
         </div>
     </main>
     <!-- FOOTER HERE -->
