--- a/templeinn/services.html
+++ b/templeinn/services.html
@@ -133,6 +133,7 @@
                     <a class="special-Btn" href="missionary.html">Full-Time Temple Missionaries</a>
                 </div>
             </div>
+        </div>
     </main>
     <!-- FOOTER HERE -->
     <footer>
