--- a/templeinn/reservations.html
+++ b/templeinn/reservations.html
@@ -81,7 +81,7 @@
 
                 <h3>Room Information</h3>
                 <div class="dropMenu">
-                    <label for="location" id="location">Hotel Location: </label><br>
+                    <label id="location">Hotel Location: </label><br>
                     <select name="location">
                         <option value="select" selected disabled>Select a Location</option>
                         <option value="Saratoga Springs">Saratoga Springs Utah</option>
@@ -94,7 +94,7 @@
                 <hr>
                 <br>
                 <div class="dropMenu">
-                    <label for="checkInMonth" id="checkIn">Check In: </label><br>
+                    <label id="checkIn">Check In: </label><br>
                     <label for="checkInMonth">Month</label>
                     <select name="checkInMonth">
                         <option>January</option>
@@ -110,7 +110,7 @@
                         <option>November</option>
                         <option>December</option>
                     </select><br>
-                    <label for="checkInDay" id="checkInDay">Day</label>
+                    <label id="checkInDay">Day</label>
                     <select name="checkInDay">
                         <option>1</option>
                         <option>2</option>
@@ -144,7 +144,7 @@
                         <option>30</option>
                         <option>31</option>
                     </select><br>
-                    <label for="checkInYear" id="checkInYear">Year</label>
+                    <label id="checkInYear">Year</label>
                     <select name="checkInYear">
                         <option>2022</option>
                         <option>2023</option>
@@ -157,7 +157,7 @@
                 <hr>
                 <br>
                 <div class="dropMenu">
-                    <label for="checkOut" id="checkOut">Check Out: </label><br>
+                    <label id="checkOut">Check Out: </label><br>
                     <label for="checkOutMonth">Month</label>
                     <select name="checkOutMonth">
                         <option>January</option>
@@ -173,7 +173,7 @@
                         <option>November</option>
                         <option>December</option>
                     </select><br>
-                    <label for="checkOutDay">Day</label>
+                    <label>Day</label>
                     <select name="checkOutDay">
                         <option>1</option>
                         <option>2</option>
@@ -207,7 +207,7 @@
                         <option>30</option>
                         <option>31</option>
                     </select><br>
-                    <label for="checkOutYear">Year</label>
+                    <label>Year</label>
                     <select name="checkOutYear">
                         <option>2022</option>
                         <option>2023</option>
@@ -220,7 +220,7 @@
                 <hr>
                 <br>
                 <div class="dropMenu" id="roomType">
-                    <label for="roomType">Room Type: </label><br>
+                    <label>Room Type: </label><br>
                     <select name="roomType">
                         <option value="select" selected disabled>Select Room Type</option>
                         <option value="1 King Bed">1 King Bed</option>
