--- a/templeinn/reservations.html
+++ b/templeinn/reservations.html
@@ -95,7 +95,7 @@
                 <br>
                 <div class="dropMenu">
                     <label id="checkIn">Check In: </label><br>
-                    <label for="checkInMonth">Month</label>
+                    <label>Month</label>
                     <select name="checkInMonth">
                         <option>January</option>
                         <option>February</option>
@@ -158,7 +158,7 @@
                 <br>
                 <div class="dropMenu">
                     <label id="checkOut">Check Out: </label><br>
-                    <label for="checkOutMonth">Month</label>
+                    <label>Month</label>
                     <select name="checkOutMonth">
                         <option>January</option>
                         <option>February</option>
