--- a/templeinn/contact.html
+++ b/templeinn/contact.html
@@ -66,7 +66,7 @@
 
                         <div class="contact-div" id="contact-div1">
                             <h2>Temple Inn and Suites</h2>
-                            <div id="contact-info">
+                            <div>
                                 <p>4800 Montgomery Ln #300<br>
                                     Bethesda, MD 20814<br>
                                 </p>
@@ -108,7 +108,7 @@
                 </div>
 
             </div>
-
+        </div>
     </main>
     <!-- FOOTER HERE -->
     <footer>
