--- a/templeinn/contactthanks.html
+++ b/templeinn/contactthanks.html
@@ -77,7 +77,7 @@
                     <img class="all-images" src="images/LaytonUtahTemple.jpg" alt="Layton Utah Temple">
                 </div>
             </div>
-
+        </div>
     </main>
     <!-- FOOTER HERE -->
     <footer>
