--- a/templeinn/laytonschedule.html
+++ b/templeinn/laytonschedule.html
@@ -46,7 +46,7 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <div id="">
+        <div>
             <div class="page-intro">
                 <h2>Temple Ordinance Schedule</h2>
                 <p>Temple schedule is subject to change when needed. If you desire to go through the temple
@@ -56,7 +56,7 @@
             <div>
                 <div>
                     <a id="back-button" href="temples.html">
-                        <-Back to Temples </a>
+                        Back to Temples </a>
                 </div>
                 <div class="main-divs" id="json-divs">
                     <div class="t-cards">
@@ -68,8 +68,6 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
         <div class="quote">
             <h3>Temple Quote</h3>
