--- a/templeinn/ordinanceschedule.html
+++ b/templeinn/ordinanceschedule.html
@@ -57,7 +57,7 @@
             <div>
                 <div id="back-button">
                     <a href="temples.html">
-                        <-Back to Temples </a>
+                        Back to Temples </a>
                 </div>
             </div>
             <div class="main-divs" id="ordinance-grid">
