--- a/templeinn/saratogaschedule.html
+++ b/templeinn/saratogaschedule.html
@@ -54,9 +54,9 @@
                 </p>
             </div>
             <div>
-                <div id="back-button">
-                    <a href="temples.html">
-                        <-Back to Temples </a>
+                <div>
+                    <a id="back-button" href="temples.html">
+                        Back to Temples </a>
                 </div>
                 <div class="main-divs" id="json-divs">
                     <div class="t-cards">
