--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -82,8 +82,8 @@
                     <p><b>Dedication:</b><br>Completion 2022</p>
                 </div>
                 <div class="templeBtn-grid">
-                    <a class="templeButtons" href="laytonschedule.html">Temple Schedule</a>
-                    <a class="templeButtons" href="laytonclosure.html">Temple Closures</a>
+                    <a class="templeButtons" href="saratogaschedule.html">Temple Schedule</a>
+                    <a class="templeButtons" href="saratogaclosure.html">Temple Closures</a>
                 </div>
             </div>
 
@@ -114,8 +114,8 @@
                     <p><b>Dedication:</b><br> 7 June 2015</p>
                 </div>
                 <div class="templeBtn-grid">
-                    <a class="templeButtons" href="laytonschedule.html">Temple Schedule</a>
-                    <a class="templeButtons" href="laytonclosure.html">Temple Closures</a>
+                    <a class="templeButtons" href="paysonschedule.html">Temple Schedule</a>
+                    <a class="templeButtons" href="paysonclosure.html">Temple Closures</a>
                 </div>
             </div>
 
@@ -146,8 +146,8 @@
                     <p><b>Dedication:</b><br> 18 January 1972</p>
                 </div>
                 <div class="templeBtn-grid">
-                    <a class="templeButtons" href="laytonschedule.html">Temple Schedule</a>
-                    <a class="templeButtons" href="laytonclosure.html">Temple Closures</a>
+                    <a class="templeButtons" href="ogdenschedule.html">Temple Schedule</a>
+                    <a class="templeButtons" href="ogdenclosure.html">Temple Closures</a>
                 </div>
                 <div>
                     <div></div>
