--- a/templeinn/paysonschedule.html
+++ b/templeinn/paysonschedule.html
@@ -56,7 +56,7 @@
             <div>
                 <div>
                     <a id="back-button" href="temples.html">
-                        <-Back to Temples </a>
+                        Back to Temples </a>
                 </div>
                 <div class="main-divs" id="json-divs">
                     <div class="t-cards">
