--- a/templeinn/templeclosureschedule.html
+++ b/templeinn/templeclosureschedule.html
@@ -58,7 +58,7 @@
             <div>
                 <div>
                     <a id="back-button" href="temples.html">
-                        <-Back to Temples </a>
+                        Back to Temples </a>
                 </div>
             </div>
             <div class="main-divs" id="ordinance-grid">
