--- a/templeinn/ogdenschedule.html
+++ b/templeinn/ogdenschedule.html
@@ -46,7 +46,7 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <div id="">
+        <div>
             <div class="page-intro">
                 <h2>Temple Ordinance Schedule</h2>
                 <p>Temple schedule is subject to change when needed. If you desire to go through the temple
@@ -69,15 +69,13 @@
                 </div>
             </div>
 
-
-        </div>
-        <div class="quote">
-            <h3>Temple Quote</h3>
-            <p>"I want to see the temple built in a manner that it will endure through the Millennium.
-                This is not the only temple we shall build; there will be hundreds of them built and
-                dedicated to the Lord."
-                —Brigham Young</p>
-        </div>
+            <div class="quote">
+                <h3>Temple Quote</h3>
+                <p>"I want to see the temple built in a manner that it will endure through the Millennium.
+                    This is not the only temple we shall build; there will be hundreds of them built and
+                    dedicated to the Lord."
+                    —Brigham Young</p>
+            </div>
         </div>
     </main>
     <!-- FOOTER HERE -->
