--- a/templeinn/home.html
+++ b/templeinn/home.html
@@ -39,7 +39,9 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
-
+        <div class="weatherAlert">
+            <span id="close">&#10060;</span>
+        </div>
 
     </header>
 
