--- a/templeinn/resources.html
+++ b/templeinn/resources.html
@@ -168,7 +168,7 @@
                         width="25"></a>
                 <a href="https://instagram.com" target="blank"><img src="images/instagram.png" alt="Linkedin Logo"
                         width="25"></a>
-                <a href="https://twitter.com" target="blank"><img src="images/twitter.png" alt="Facebook Logo"
+                <a href="https://twitter.com" target="blank"><img src="images/twitter.png" alt="Twitter Logo"
                         width="25"></a>
             </div>
         </div>
