--- a/templeinn/home.html
+++ b/templeinn/home.html
@@ -88,10 +88,9 @@
                 </div>
             </div>
 
-            <div class="t-cards">
-                <div>
-                    <div class="today-w"></div>
-                    <h2>Current Weather Conditions</h2>
+            <div class="t-cards" id="weatherDiv">
+                <div id="todayWeather">
+                    <h2>Today's Weather Conditions</h2>
                     <hr>
                     <p>Currently: <span id="currently"></span></p>
                     <p>Temperature: <span id="temperature"></span>&#176;F</p>
@@ -171,6 +170,7 @@
     </footer>
     <script src="js/main.js"></script>
     <script src="js/weather.js"></script>
+    <script src="js/threedayweather.js"></script>
 </body>
 
 </html>
